--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -4030,3 +4030,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 4 mins
+- name: devspaces-code-rhel8
+  tag: 3.11-8
+  taskId: 56894804
+  timeCreate: Fri Nov 10 14:05:57 2023
+  timeStart: Fri Nov 10 14:19:34 2023
+  timeFinish: Fri Nov 10 14:27:49 2023
+  timeWait: 13 mins
+  timeBuild: 8 mins
+  timeTotal: 21 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-46
+  taskId: 56895110
+  timeCreate: Fri Nov 10 14:37:08 2023
+  timeStart: Fri Nov 10 14:37:26 2023
+  timeFinish: Fri Nov 10 14:40:43 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
