chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -4066,3 +4066,75 @@
   timeWait: 0 mins
   timeBuild: 2 mins
   timeTotal: 3 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.11-8
+  taskId: 56905858
+  timeCreate: Sun Nov 12 03:53:01 2023
+  timeStart: Sun Nov 12 03:53:16 2023
+  timeFinish: Sun Nov 12 03:58:32 2023
+  timeWait: 0 mins
+  timeBuild: 5 mins
+  timeTotal: 5 mins
+- name: devspaces-imagepuller-rhel8
+  tag: 3.11-4
+  taskId: 56905859
+  timeCreate: Sun Nov 12 03:53:01 2023
+  timeStart: Sun Nov 12 03:53:17 2023
+  timeFinish: Sun Nov 12 04:04:55 2023
+  timeWait: 0 mins
+  timeBuild: 11 mins
+  timeTotal: 11 mins
+- name: devspaces-dashboard-rhel8
+  tag: 3.11-21
+  taskId: 56905861
+  timeCreate: Sun Nov 12 03:53:27 2023
+  timeStart: Sun Nov 12 03:54:04 2023
+  timeFinish: Sun Nov 12 04:15:57 2023
+  timeWait: 0 mins
+  timeBuild: 21 mins
+  timeTotal: 22 mins
+- name: devspaces-operator
+  tag: 3.11-9
+  taskId: 56905862
+  timeCreate: Sun Nov 12 03:56:48 2023
+  timeStart: Sun Nov 12 03:57:07 2023
+  timeFinish: Sun Nov 12 04:11:30 2023
+  timeWait: 0 mins
+  timeBuild: 14 mins
+  timeTotal: 14 mins
+- name: devspaces-traefik-rhel8
+  tag: 3.11-4
+  taskId: 56905863
+  timeCreate: Sun Nov 12 03:56:51 2023
+  timeStart: Sun Nov 12 03:57:08 2023
+  timeFinish: Sun Nov 12 04:20:34 2023
+  timeWait: 0 mins
+  timeBuild: 23 mins
+  timeTotal: 23 mins
+- name: devspaces-configbump-rhel8
+  tag: 3.11-5
+  taskId: 56905881
+  timeCreate: Sun Nov 12 03:57:11 2023
+  timeStart: Sun Nov 12 03:57:54 2023
+  timeFinish: Sun Nov 12 04:09:51 2023
+  timeWait: 0 mins
+  timeBuild: 11 mins
+  timeTotal: 12 mins
+- name: devspaces-server-rhel8
+  tag: 3.11-10
+  taskId: 56905921
+  timeCreate: Sun Nov 12 04:07:55 2023
+  timeStart: Sun Nov 12 04:08:33 2023
+  timeFinish: Sun Nov 12 04:16:54 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-48
+  taskId: 56905948
+  timeCreate: Sun Nov 12 04:21:05 2023
+  timeStart: Sun Nov 12 04:21:28 2023
+  timeFinish: Sun Nov 12 04:24:31 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
