--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -4183,3 +4183,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.11-10
+  taskId: 56906296
+  timeCreate: Sun Nov 12 11:33:15 2023
+  timeStart: Sun Nov 12 11:33:43 2023
+  timeFinish: Sun Nov 12 11:40:12 2023
+  timeWait: 0 mins
+  timeBuild: 6 mins
+  timeTotal: 6 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-51
+  taskId: 56906342
+  timeCreate: Sun Nov 12 12:02:10 2023
+  timeStart: Sun Nov 12 12:02:31 2023
+  timeFinish: Sun Nov 12 12:05:47 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
