--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -4201,3 +4201,21 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-operator
+  tag: 3.11-10
+  taskId: 56912620
+  timeCreate: Mon Nov 13 03:32:52 2023
+  timeStart: Mon Nov 13 03:33:37 2023
+  timeFinish: Mon Nov 13 03:48:43 2023
+  timeWait: 0 mins
+  timeBuild: 15 mins
+  timeTotal: 15 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-52
+  taskId: 56912928
+  timeCreate: Mon Nov 13 03:58:25 2023
+  timeStart: Mon Nov 13 03:59:02 2023
+  timeFinish: Mon Nov 13 04:02:52 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 4 mins
