--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -4264,3 +4264,21 @@
   timeWait: 0 mins
   timeBuild: 2 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.11-12
+  taskId: 56923736
+  timeCreate: Mon Nov 13 10:27:32 2023
+  timeStart: Mon Nov 13 10:27:46 2023
+  timeFinish: Mon Nov 13 10:35:53 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-55
+  taskId: 56924284
+  timeCreate: Mon Nov 13 10:45:58 2023
+  timeStart: Mon Nov 13 10:46:09 2023
+  timeFinish: Mon Nov 13 10:49:10 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
