--- a/dependencies/job-config.json
+++ b/dependencies/job-config.json
@@ -531,15 +531,15 @@
       },
       "3.10": {
         "CSV_VERSION": "3.10.0",
-        "CSV_VERSION_PREV": "3.9.0"
+        "CSV_VERSION_PREV": "3.9.1"
       },
       "3.11": {
         "CSV_VERSION": "3.11.0",
-        "CSV_VERSION_PREV": "3.9.0"
+        "CSV_VERSION_PREV": "3.9.1"
       },
       "3.x": {
         "CSV_VERSION": "3.11.0",
-        "CSV_VERSION_PREV": "3.9.0"
+        "CSV_VERSION_PREV": "3.9.1"
       }
     }
   },
@@ -557,10 +557,10 @@
       "3.x": "n/a"
     },
     "FLOATING_QUAY_TAGS": {
-      "3.9": "latest",
-      "3.10": "next",
-      "3.11": "3.11",
-      "3.x": "3.11"
+      "3.9": "3.9",
+      "3.10": "latest",
+      "3.11": "next",
+      "3.x": "next"
     },
     "DEV_WORKSPACE_CONTROLLER": {
       "3.9": "v0.13.0",
