chore: Update dependencies/LATEST_IMAGES, COMMITS, DIGESTS, INDEXES, BUILD_TIMES
Signed-off-by: devstudio-release <nickboldt+devstudio-release@gmail.com>

--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -4336,3 +4336,21 @@
   timeWait: 0 mins
   timeBuild: 2 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.11-15
+  taskId: 56950363
+  timeCreate: Tue Nov 14 13:29:45 2023
+  timeStart: Tue Nov 14 13:30:27 2023
+  timeFinish: Tue Nov 14 13:37:45 2023
+  timeWait: 0 mins
+  timeBuild: 7 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-59
+  taskId: 56951034
+  timeCreate: Tue Nov 14 13:56:21 2023
+  timeStart: Tue Nov 14 13:56:23 2023
+  timeFinish: Tue Nov 14 13:59:22 2023
+  timeWait: 0 mins
+  timeBuild: 2 mins
+  timeTotal: 3 mins
