--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -4354,3 +4354,21 @@
   timeWait: 0 mins
   timeBuild: 2 mins
   timeTotal: 3 mins
+- name: devspaces-code-rhel8
+  tag: 3.11-16
+  taskId: 56960340
+  timeCreate: Tue Nov 14 22:31:16 2023
+  timeStart: Tue Nov 14 22:32:01 2023
+  timeFinish: Tue Nov 14 22:40:15 2023
+  timeWait: 0 mins
+  timeBuild: 8 mins
+  timeTotal: 8 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-60
+  taskId: 56961060
+  timeCreate: Tue Nov 14 22:50:03 2023
+  timeStart: Tue Nov 14 22:50:38 2023
+  timeFinish: Tue Nov 14 22:54:02 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
