--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -4372,3 +4372,30 @@
   timeWait: 0 mins
   timeBuild: 3 mins
   timeTotal: 3 mins
+- name: devspaces-server-rhel8
+  tag: 3.11-12
+  taskId: 56973248
+  timeCreate: Wed Nov 15 14:18:39 2023
+  timeStart: Wed Nov 15 14:26:37 2023
+  timeFinish: Wed Nov 15 14:36:30 2023
+  timeWait: 7 mins
+  timeBuild: 9 mins
+  timeTotal: 17 mins
+- name: devspaces-code-rhel8
+  tag: 3.11-17
+  taskId: 56973845
+  timeCreate: Wed Nov 15 14:45:47 2023
+  timeStart: Wed Nov 15 15:04:11 2023
+  timeFinish: Wed Nov 15 15:13:09 2023
+  timeWait: 18 mins
+  timeBuild: 8 mins
+  timeTotal: 27 mins
+- name: devspaces-operator-bundle
+  tag: 3.11-61
+  taskId: 56974167
+  timeCreate: Wed Nov 15 15:00:05 2023
+  timeStart: Wed Nov 15 15:13:21 2023
+  timeFinish: Wed Nov 15 15:17:29 2023
+  timeWait: 13 mins
+  timeBuild: 4 mins
+  timeTotal: 17 mins
