--- a/dependencies/LATEST_BUILD_TIMES.yml
+++ b/dependencies/LATEST_BUILD_TIMES.yml
@@ -3958,3 +3958,57 @@
   timeWait: 10 mins
   timeBuild: 3 mins
   timeTotal: 14 mins
+- name: devspaces-imagepuller-rhel8
+  tag: 3.10-13
+  taskId: 57058024
+  timeCreate: Sun Nov 19 00:24:56 2023
+  timeStart: Sun Nov 19 00:25:06 2023
+  timeFinish: Sun Nov 19 00:37:29 2023
+  timeWait: 0 mins
+  timeBuild: 12 mins
+  timeTotal: 12 mins
+- name: devspaces-configbump-rhel8
+  tag: 3.10-22
+  taskId: 57058031
+  timeCreate: Sun Nov 19 00:25:17 2023
+  timeStart: Sun Nov 19 00:25:54 2023
+  timeFinish: Sun Nov 19 00:38:13 2023
+  timeWait: 0 mins
+  timeBuild: 12 mins
+  timeTotal: 12 mins
+- name: devspaces-operator
+  tag: 3.10-28
+  taskId: 57058032
+  timeCreate: Sun Nov 19 00:26:19 2023
+  timeStart: Sun Nov 19 00:26:40 2023
+  timeFinish: Sun Nov 19 00:42:57 2023
+  timeWait: 0 mins
+  timeBuild: 16 mins
+  timeTotal: 16 mins
+- name: devspaces-machineexec-rhel8
+  tag: 3.10-16
+  taskId: 57058058
+  timeCreate: Sun Nov 19 00:34:28 2023
+  timeStart: Sun Nov 19 00:35:06 2023
+  timeFinish: Sun Nov 19 00:40:26 2023
+  timeWait: 0 mins
+  timeBuild: 5 mins
+  timeTotal: 5 mins
+- name: devspaces-udi-rhel8
+  tag: 3.10-22
+  taskId: 57058185
+  timeCreate: Sun Nov 19 01:06:56 2023
+  timeStart: Sun Nov 19 01:07:07 2023
+  timeFinish: Sun Nov 19 01:58:41 2023
+  timeWait: 0 mins
+  timeBuild: 51 mins
+  timeTotal: 51 mins
+- name: devspaces-operator-bundle
+  tag: 3.10-209
+  taskId: 57059232
+  timeCreate: Sun Nov 19 04:50:32 2023
+  timeStart: Sun Nov 19 04:50:45 2023
+  timeFinish: Sun Nov 19 04:54:18 2023
+  timeWait: 0 mins
+  timeBuild: 3 mins
+  timeTotal: 3 mins
